bug 277477: CompareEditorInput should not instantiate new Booleans